--- a/pack/mods/minecraft_autotools.pw.toml
+++ b/pack/mods/minecraft_autotools.pw.toml
@@ -1,13 +1,13 @@
 name = "AutoTools"
-filename = "autotools-1.7-fabric-1.20.jar"
+filename = "autotools-1.9-fabric-1.20.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/zgVJyCgK/versions/lUpEWkQv/autotools-1.7-fabric-1.20.jar"
+url = "https://cdn.modrinth.com/data/zgVJyCgK/versions/fWZpuwu4/autotools-1.9-fabric-1.20.1.jar"
 hash-format = "sha1"
-hash = "a119c3db000c692d888f1265c17331ec6c3de720"
+hash = "b101fdba0bdc09a280aff3e35772eb247f0d7a11"
 
 [update]
 [update.modrinth]
 mod-id = "zgVJyCgK"
-version = "lUpEWkQv"
+version = "fWZpuwu4"
