--- a/pack/mods/physicsmod.pw.toml
+++ b/pack/mods/physicsmod.pw.toml
@@ -1,5 +1,5 @@
 name = "Physics Mod"
-filename = "physics-mod-3.0.14-mc-1.20.1-fabric.jar"
+filename = "physics-mod-pro-v171b-fabric-1.20.1.jar
 side = "client"
 
 [download]
